--- a/wp-content/themes/timber-starter-theme/package.json
+++ b/wp-content/themes/timber-starter-theme/package.json
@@ -8,15 +8,16 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch --config=webpack.dev.config.js",
-    "dev": "webpack --config=webpack.dev.config.js",
-    "prod": "NODE_ENV=production webpack --config=webpack.prod.config.js"
+    "watch": "webpack --watch --config webpack.dev.js",
+    "dev": "webpack --config webpack.dev.js",
+    "prod": "NODE_ENV=production webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
+    "@squoosh/lib": "^0.3.1",
     "@vue/cli-service": "~5.0.0",
     "@vue/compiler-sfc": "^3.4.21",
     "autoprefixer": "^10.4.21",
@@ -28,6 +29,18 @@
     "core-js": "^3.8.3",
     "css-loader": "^7.0.0",
     "cssnano": "^7.0.6",
+    "file-loader": "^6.2.0",
+    "image-minimizer-webpack-plugin": "^4.1.3",
+    "image-webpack-loader": "^8.1.0",
+    "imagemin": "^9.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^8.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "imagemin-webpack": "^5.1.1",
+    "lodash-webpack-plugin": "^0.11.6",
     "mini-css-extract-plugin": "^2.9.2",
     "node-modules": "^1.0.1",
     "postcss": "^8.5.3",
@@ -35,13 +48,17 @@
     "rucksack-css": "^1.0.2",
     "sass": "^1.74.1",
     "sass-loader": "^16.0.5",
+    "sharp": "^0.33.5",
     "style-loader": "^3.3.4",
+    "svgo": "^3.3.2",
     "url-loader": "^4.1.1",
     "vue": "^3.4.21",
     "vue-axios": "^3.5.2",
     "vue-loader": "^17.4.2",
     "vue-template-loader": "^1.1.0",
+    "webp-loader": "^0.6.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^6.0.1"
   }
 }
