--- a/wp-content/themes/timber-starter-theme/package.json
+++ b/wp-content/themes/timber-starter-theme/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch --config webpack.dev.js",
-    "dev": "webpack --config webpack.dev.js",
+    "watch": "webpack --watch --config webpack.dev.js --mode development --env NODE_ENV=development",
+    "dev": "webpack --config webpack.dev.js --mode production --env NODE_ENV=production",
     "prod": "NODE_ENV=production webpack --config webpack.prod.js"
   },
   "author": "",
@@ -29,6 +29,7 @@
     "core-js": "^3.8.3",
     "css-loader": "^7.0.0",
     "cssnano": "^7.0.6",
+    "dotenv-webpack": "^8.1.0",
     "file-loader": "^6.2.0",
     "image-minimizer-webpack-plugin": "^4.1.3",
     "image-webpack-loader": "^8.1.0",
@@ -60,5 +61,13 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^6.0.1"
+  },
+  "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.79",
+    "dotenv": "^16.4.7",
+    "path": "^0.12.7",
+    "stream": "^0.0.3",
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vue3-google-map": "^0.21.1"
   }
 }
