--- a/wp-content/themes/timber-starter-theme/package.json
+++ b/wp-content/themes/timber-starter-theme/package.json
@@ -18,8 +18,9 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@squoosh/lib": "^0.3.1",
-    "@vue/cli-service": "~5.0.0",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/compiler-sfc": "^3.4.21",
+    "algoliasearch": "^5.23.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.6.8",
     "babel-core": "^6.26.3",
@@ -53,13 +54,14 @@
     "style-loader": "^3.3.4",
     "svgo": "^3.3.2",
     "url-loader": "^4.1.1",
-    "vue": "^3.4.21",
+    "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
+    "vue-instantsearch": "^4.20.6",
     "vue-loader": "^17.4.2",
-    "vue-template-loader": "^1.1.0",
+    "vue-template-compiler": "^2.7.16",
     "webp-loader": "^0.6.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
