--- a/wp-content/themes/timber-starter-theme/package.json
+++ b/wp-content/themes/timber-starter-theme/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch --config webpack.dev.js --mode development --env NODE_ENV=development",
-    "dev": "webpack --config webpack.dev.js --mode production --env NODE_ENV=production",
+    "dev": "webpack --config webpack.dev.js --mode development --env NODE_ENV=development",
+    "staging": "NODE_ENV=staging webpack --config webpack.dev.js",
     "prod": "NODE_ENV=production webpack --config webpack.prod.js"
   },
   "author": "",
