--- a/wp-content/themes/timber-starter-theme/package.json
+++ b/wp-content/themes/timber-starter-theme/package.json
@@ -54,6 +54,7 @@
     "sharp": "^0.33.5",
     "style-loader": "^3.3.4",
     "svgo": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.14",
     "url-loader": "^4.1.1",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
