Added Address input field and synced with Google map geolocation

--- a/wp-content/themes/timber-starter-theme/package.json
+++ b/wp-content/themes/timber-starter-theme/package.json
@@ -48,6 +48,7 @@
     "node-modules": "^1.0.1",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
+    "postscribe": "^2.0.8",
     "rucksack-css": "^1.0.2",
     "sass": "^1.74.1",
     "sass-loader": "^16.0.5",
@@ -68,10 +69,12 @@
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
+    "@vueuse/core": "^13.1.0",
     "dotenv": "^16.4.7",
     "path": "^0.12.7",
     "stream": "^0.0.3",
     "vite-plugin-vue-devtools": "^7.7.2",
+    "vue-google-autocomplete": "^1.1.4",
     "vue3-google-map": "^0.21.1"
   }
 }
