--- a/wp-content/themes/timber-starter-theme/package.json
+++ b/wp-content/themes/timber-starter-theme/package.json
@@ -55,6 +55,7 @@
     "sharp": "^0.33.5",
     "style-loader": "^3.3.4",
     "svgo": "^3.3.2",
+    "tailwindcss": "^4.1.7",
     "terser-webpack-plugin": "^5.3.14",
     "url-loader": "^4.1.1",
     "vue": "^3.5.13",
@@ -69,6 +70,7 @@
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
+    "@tailwindcss/postcss": "^4.1.7",
     "@vueuse/core": "^13.1.0",
     "dotenv": "^16.4.7",
     "path": "^0.12.7",
